Deleted search in header, change color checkbox, change the indents on the filter button, changed the line width Id, change place logo admin and language.

--- a/core/src/main/resources/static/management/css/table_Modal_Pagination.css
+++ b/core/src/main/resources/static/management/css/table_Modal_Pagination.css
@@ -71,7 +71,7 @@ body {
     font-size: 14px;
     border: none;
     min-width: 50px;
-    border-radius: 2px;
+    border-radius: 5px;
     border: none;
     outline: none !important;
     margin-left: 20px;
@@ -291,7 +291,9 @@ table.table .avatar {
 }
 
 .custom-checkbox {
-    position: relative;
+    position: absolute;
+    margin-left: 8px;
+    margin-top: -9px;
 }
 
 .custom-checkbox input[type="checkbox"] {
@@ -335,8 +337,8 @@ table.table .avatar {
 }
 
 .custom-checkbox input[type="checkbox"]:checked + label:before {
-    border-color: #245740;
-    background: #245740;
+    border-color: #13AA57;
+    background: #13AA57;
 }
 
 .dropbtn.role {
@@ -617,7 +619,7 @@ table.table .avatar {
     position: absolute;
     right: 50px;
     display: flex;
-    padding-top: 5px;
+    /*padding-top: 5px;*/
 
 }
 
@@ -866,7 +868,7 @@ table.table .avatar {
     flex-grow: 0;
 
     margin-left: 20px;
-    height: 35px;
+    height: 36px;
     color: #9CA7B0;
     background-color: white;
     margin-top: 5px;
@@ -920,7 +922,7 @@ td input[type=search] {
     background-color: #ffffff;
     color: #13AA57;
     border-radius: 5px;
-    width: 147px;
+    width: 175px;
     height: 40px;
 }
 
@@ -1000,6 +1002,7 @@ a#deactivateOneSubmit.btn.btn-danger {
 
 .table-primary > th {
     background-color: #F5F6F6;
+    height: 39px;
 }
 
 .graph {
