--- a/core/src/main/resources/templates/core/management_user_habits.html
+++ b/core/src/main/resources/templates/core/management_user_habits.html
@@ -209,6 +209,16 @@
                                     <input type="file" class="form-control" id="fileCreate" name="file">
                                     <span th:id="errorModalAddfile" class="errorSpan"></span>
                                 </div>
+                                <div class="form-group">
+                                    <label>complexity</label>
+                                    <input type="text" class="form-control" th:name="complexity" required>
+<!--                                    <span th:id="errorModalAddHabitImage" class="errorSpan"></span>-->
+                                </div>
+                                <div class="form-group">
+                                    <label>duration</label>
+                                    <input type="text" class="form-control" th:name="defaultDuration" required>
+<!--                                    <span th:id="errorModalAddHabitImage" class="errorSpan"></span>-->
+                                </div>
                                 <th:block th:each="language, iterInfo : ${languages}">
                                     <div class="row">
                                         <div class="col">
