global search in progress

--- a/core/src/main/resources/templates/core/management_user_habits.html
+++ b/core/src/main/resources/templates/core/management_user_habits.html
@@ -211,12 +211,12 @@
                                 </div>
                                 <div class="form-group">
                                     <label>complexity</label>
-                                    <input type="text" class="form-control" th:name="complexity" required>
+                                    <input type="text" class="form-control" name="complexity" required>
 <!--                                    <span th:id="errorModalAddHabitImage" class="errorSpan"></span>-->
                                 </div>
                                 <div class="form-group">
                                     <label>duration</label>
-                                    <input type="text" class="form-control" th:name="defaultDuration" required>
+                                    <input type="text" class="form-control" name="defaultDuration" required>
 <!--                                    <span th:id="errorModalAddHabitImage" class="errorSpan"></span>-->
                                 </div>
                                 <th:block th:each="language, iterInfo : ${languages}">
