--- a/core/src/main/resources/static/management/css/table_Modal_Pagination.css
+++ b/core/src/main/resources/static/management/css/table_Modal_Pagination.css
@@ -791,6 +791,9 @@ table.table .avatar {
     margin-top: 5px;
     vertical-align: middle;
 }
+.search-submit-btn{
+    visibility: hidden;
+}
 
 .search-box {
     position: relative;
