--- a/core/src/main/resources/templates/core/management_user_habits.html
+++ b/core/src/main/resources/templates/core/management_user_habits.html
@@ -35,6 +35,20 @@
                 fullText: false
             });
         });
+
+        $( function() {
+            $( "#slider-range" ).slider({
+                range: true,
+                min: 0,
+                max: 500,
+                values: [ 75, 300 ],
+                slide: function( event, ui ) {
+                    $( "#amount" ).val( "$" + ui.values[ 0 ] + " - $" + ui.values[ 1 ] );
+                }
+            });
+            $( "#amount" ).val( "$" + $( "#slider-range" ).slider( "values", 0 ) +
+                " - $" + $( "#slider-range" ).slider( "values", 1 ) );
+        } );
     </script>
 
     <style>
@@ -107,9 +121,14 @@
                                                                       border-radius: 4px;
                                                                       height: 36px;
                                                                       margin-top: 15px; ">
+                                            <div id="slider-range"></div>
+                                            <p>
+                                                <label for="amount">Price range:</label>
+                                                <input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
+                                            </p>
                                             <input type="range" min="7" max="21" onchange="updateTextInput(this.value);"
                                                    style="width :239px;">
-                                            <input type="text" id="textInput" value="14 days"
+                                            <input  id="textInput" value="14 days"
                                                    style="padding: 0; color:#13AA57 ">
                                             <div class="habit_complexity_filter" id="habit_complexity_filter">
                                                 <img src="/img/star-empty.png" class="complexity_1">
