--- a/core/src/main/resources/templates/core/management_user_habits.html
+++ b/core/src/main/resources/templates/core/management_user_habits.html
@@ -21,8 +21,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-
     <link rel="stylesheet" th:href="@{/management/css/table_Modal_Pagination.css}">
+    <link rel="stylesheet" th:href="@{/management/css/slider.css}">
     <link rel="stylesheet" th:href="@{/management/css/sidebar.css}">
 
     <script th:src="@{/management/localization/buttonsAJAX.js}"></script>
@@ -35,20 +35,6 @@
                 fullText: false
             });
         });
-
-        $( function() {
-            $( "#slider-range" ).slider({
-                range: true,
-                min: 0,
-                max: 500,
-                values: [ 75, 300 ],
-                slide: function( event, ui ) {
-                    $( "#amount" ).val( "$" + ui.values[ 0 ] + " - $" + ui.values[ 1 ] );
-                }
-            });
-            $( "#amount" ).val( "$" + $( "#slider-range" ).slider( "values", 0 ) +
-                " - $" + $( "#slider-range" ).slider( "values", 1 ) );
-        } );
     </script>
 
     <style>
@@ -111,7 +97,7 @@
 
                                     </button>
                                     <div class="form-popup" id="filter">
-                                        <form action="/action_page.php" class="form-container">
+                                        <form th:action="@{/management/habits}" class="form-container" style="width: 280px">
                                             <div style="margin-bottom: 10px">
                                                 <input type="checkbox"
                                                        style="float: left; margin-top: 6px;margin-right: 5px">
@@ -120,20 +106,36 @@
                                             <input type="text" placeholder="Search..." style="border: 1px solid #9CA7B0;
                                                                       border-radius: 4px;
                                                                       height: 36px;
-                                                                      margin-top: 15px; ">
-                                            <div id="slider-range"></div>
-                                            <p>
-                                                <label for="amount">Price range:</label>
-                                                <input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
-                                            </p>
-                                            <input type="range" min="7" max="21" onchange="updateTextInput(this.value);"
-                                                   style="width :239px;">
-                                            <input  id="textInput" value="14 days"
-                                                   style="padding: 0; color:#13AA57 ">
-                                            <div class="habit_complexity_filter" id="habit_complexity_filter">
+                                                                      margin-top: 15px;" name="searchReg">
+<!--                                            <input type="range" min="7" max="21" onchange="updateTextInput(this.value);"-->
+<!--                                                   style="width :239px;">-->
+<!--                                            <input  id="textInput" value="14 days"-->
+<!--                                                   style="padding: 0; color:#13AA57 ">-->
+
+                                            <div class="middle">
+                                                <div class="multi-range-slider">
+                                                    <input type="range" id="input-left" min="7" max="56" value="7"
+                                                           name="durationFrom">
+                                                    <input type="range" id="input-right" min="7" max="56" value="56"
+                                                           name="durationTo">
+
+                                                    <div class="slider">
+                                                        <div class="track"></div>
+                                                        <div class="range"></div>
+                                                        <div class="thumb left"></div>
+                                                        <div class="thumb right"></div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div style="margin-top: 5px">
+                                                <p id="leftText" style="color: #13aa57">7 - 56 days</p>
+                                            </div>
+
+                                            <div class="habit_complexity_filter" id="habit_complexity_filter" style="margin-top: 20px">
                                                 <img src="/img/star-empty.png" class="complexity_1">
                                                 <img src="/img/star-empty.png" class="complexity_2">
                                                 <img src="/img/star-empty.png" class="complexity_3">
+                                                <input id="complexityInput" type="text" name="complexity" style="visibility: hidden; height: 0px;width: 0px">
                                                 </div>
                                             <div style="margin-top: 21px">
                                                 <input type="checkbox"
@@ -145,7 +147,7 @@
                                             </div>
 
                                             <div style="float: right;margin-top: 70px; margin-bottom: 18px; ">
-                                                <button type="submit" class="filter-btn" style="width: 91px;
+                                                <button th:action="@{/management/habits}" type="submit" class="filter-btn" style="width: 91px;
                                             height: 40px"><b>Cancel</b></button>
                                                 <button type="submit" class="apply-btn" style="float: right">
                                                     <b>Apply</b>
@@ -499,9 +501,77 @@
         });
     });
 
-    function updateTextInput(val) {
-        document.getElementById('textInput').value = val + " days";
+    function showLeftVal(val) {
+        document.getElementById("leftText").value = val + "-"
     }
+    function showRightVal(val) {
+        document.getElementById('rightText').value = val + "days";
+    }
+
+    var inputLeft = document.getElementById("input-left");
+    var inputRight = document.getElementById("input-right");
+
+    var thumbLeft = document.querySelector(".slider > .thumb.left");
+    var thumbRight = document.querySelector(".slider > .thumb.right");
+    var range = document.querySelector(".slider > .range");
+
+    function setLeftValue() {
+        var _this = inputLeft,
+            min = parseInt(_this.min),
+            max = parseInt(_this.max);
+
+        _this.value = Math.min(parseInt(_this.value), parseInt(inputRight.value) - 1);
+
+        var percent = ((_this.value - min) / (max - min)) * 100;
+
+        thumbLeft.style.left = percent + "%";
+        range.style.left = percent + "%";
+    }
+    setLeftValue();
+
+    function setRightValue() {
+        var _this = inputRight,
+            min = parseInt(_this.min),
+            max = parseInt(_this.max);
+
+        _this.value = Math.max(parseInt(_this.value), parseInt(inputLeft.value) + 1);
+
+        var percent = ((_this.value - min) / (max - min)) * 100;
+
+        thumbRight.style.right = (100 - percent) + "%";
+        range.style.right = (100 - percent) + "%";
+    }
+    setRightValue();
+
+    inputLeft.addEventListener("input", setLeftValue);
+    inputRight.addEventListener("input", setRightValue);
+
+    inputLeft.addEventListener("mouseover", function() {
+        thumbLeft.classList.add("hover");
+    });
+    inputLeft.addEventListener("mouseout", function() {
+        thumbLeft.classList.remove("hover");
+    });
+    inputLeft.addEventListener("mousedown", function() {
+        thumbLeft.classList.add("active");
+    });
+    inputLeft.addEventListener("mouseup", function() {
+        thumbLeft.classList.remove("active");
+    });
+
+    inputRight.addEventListener("mouseover", function() {
+        thumbRight.classList.add("hover");
+    });
+    inputRight.addEventListener("mouseout", function() {
+        thumbRight.classList.remove("hover");
+    });
+    inputRight.addEventListener("mousedown", function() {
+        thumbRight.classList.add("active");
+    });
+    inputRight.addEventListener("mouseup", function() {
+        thumbRight.classList.remove("active");
+    });
+
 </script>
 </body>
 
