--- a/core/src/main/resources/templates/core/management_user_habits.html
+++ b/core/src/main/resources/templates/core/management_user_habits.html
@@ -139,9 +139,12 @@
                                                 </div>
                                             <div style="margin-top: 21px">
                                                 <input type="checkbox"
-                                                       style="float: left; margin-top: 6px;margin-right: 5px">
-                                                <div style="margin-top: 0px; margin-left: 7px;">image</div>
-                                                <input type="checkbox"
+                                                       style="float: left; margin-top: 6px;margin-right: 5px;color: #13aa57">
+                                                <div style="margin-top: 0px; margin-left: 7px;">without image</div>
+                                                <input type="checkbox" name="withoutImage"
+                                                       style="float: left; margin-top: 6px;margin-right: 5px;color: #13aa57">
+                                                <div style="margin-top: 0px; margin-left: 7px;">with image</div>
+                                                <input type="checkbox" name="withImage"
                                                        style="float: left; margin-top: 6px;margin-right: 5px">
                                                 <div style="margin-top: 0px; margin-left: 7px;">locked</div>
                                             </div>
