--- a/core/src/main/resources/templates/core/management_user_habits.html
+++ b/core/src/main/resources/templates/core/management_user_habits.html
@@ -210,14 +210,12 @@
                                     <span th:id="errorModalAddfile" class="errorSpan"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label>complexity</label>
+                                    <label>[[#{greenCity.pages.table.complexity}]]</label>
                                     <input type="text" class="form-control" name="complexity" required>
-<!--                                    <span th:id="errorModalAddHabitImage" class="errorSpan"></span>-->
                                 </div>
                                 <div class="form-group">
-                                    <label>duration</label>
+                                    <label>[[#{greenCity.pages.table.duration}]]</label>
                                     <input type="text" class="form-control" name="defaultDuration" required>
-<!--                                    <span th:id="errorModalAddHabitImage" class="errorSpan"></span>-->
                                 </div>
                                 <th:block th:each="language, iterInfo : ${languages}">
                                     <div class="row">
