add validation and translations for complexity and default duration.

--- a/core/src/main/resources/templates/core/management_user_habits.html
+++ b/core/src/main/resources/templates/core/management_user_habits.html
@@ -212,10 +212,12 @@
                                 <div class="form-group">
                                     <label>[[#{greenCity.pages.table.complexity}]]</label>
                                     <input type="text" class="form-control" name="complexity" required>
+                                    <span th:id="'errorModalSavecomplexity'" class="errorSpan"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label>[[#{greenCity.pages.table.duration}]]</label>
+                                    <label>[[#{greenCity.pages.table.default.duration}]]</label>
                                     <input type="text" class="form-control" name="defaultDuration" required>
+                                    <span th:id="'errorModalSavedefaultDuration'" class="errorSpan"></span>
                                 </div>
                                 <th:block th:each="language, iterInfo : ${languages}">
                                     <div class="row">
