--- a/core/src/main/resources/templates/core/management_user.html
+++ b/core/src/main/resources/templates/core/management_user.html
@@ -129,7 +129,6 @@
                                 </div>
                             </th>
                             <th>
-                                <div style = "overflow: hidden; height: 39px">
                                 [[#{greenCity.pages.table.credo}]]
                                 <span class="table-filter-icon"></span>
                                 <div class="name-filter-form">
@@ -151,7 +150,6 @@
                                             <button type="submit" class="filter-apply">Save changes</button>
                                         </div>
                                     </form>
-                                </div>
                                 </div>
                             </th>
                             <th>
@@ -207,7 +205,8 @@
                                 <td th:text="${user.id}" style="width:50px;"></td>
                                 <td th:text="${user.name}"></td>
                                 <td th:text="${user.email}"></td>
-                                <td th:text="${user.userCredo}"></td>
+                                <td style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;
+                                height: 39px; max-width: 195px;" th:text="${user.userCredo}"></td>
                                 <td>
                                     <div class="dropdown role">
                                         <button class="dropbtn role" th:text="${user.role.name().replaceFirst('ROLE_', '').toLowerCase()}">
