--- a/core/src/main/resources/templates/core/header.html
+++ b/core/src/main/resources/templates/core/header.html
@@ -22,7 +22,7 @@
 
 <!--                </div>-->
 
-                <div class="dropdown">
+                <div class="dropdown" style="position: relative; right: 105px;">
                     <button class="dropbtn">[[#{greenCity.current.language}]]
                         <i class="fas fa-caret-down"></i>
                     </button>
